# french-speech-to-text

./: .env.example  .gitignore  CLAUDE.md  README.md  modal_app.py  observations.md  pyproject.toml
conf/: config.yaml
conf/adapter/: concat_mlp.yaml  conv_mlp.yaml
conf/data/: mls.yaml  sps.yaml
conf/experiment/: ctc_baseline.yaml  llm_adapter.yaml
conf/mode/: local.yaml  remote.yaml
conf/training/: ctc.yaml  llm.yaml
scripts/: evaluate.py  inference.py  quick_decode.py  smoke_test.py  train.py
src/data/: collate.py  datasets.py  text_normalizer.py
src/evaluation/: decode.py  metrics.py
src/models/: adapters.py  ctc_model.py  encoder.py  llm_model.py
src/training/: base.py  ctc_trainer.py  llm_trainer.py  run.py
src/utils/: device.py
tests/: test_adapters.py  test_collate.py  test_metrics.py  test_text_normalizer.py
